# software-challenge-2021

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh
src/: Algorithm.cpp  Algorithm.h  Constants.h  Evaluate.cpp  Evaluate.h  Evaluation.cpp  Evaluation.h  GameState.cpp  GameState.h  Hash.cpp  Hash.h  Network.cpp  Network.h  Pieces.cpp  Pieces.h  Strings.h  Types.h  main.cpp  test.cpp
tests/: test-GameState.cpp  test-Pieces.cpp
utils/: bench.cpp  masstest.cpp
